[project]
name = "langsmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain>=0.1.10",
    "langchain-community>=0.0.38",
    "langchain-openai>=0.1.7",
    "lxml>=6.0.2",
    "networkx>=3.5",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
]
